syntax="proto3";

// client -> gate  [MSGID_C2S_GET_ROLE_REQUEST]
message MsgC2S_GetRoleRequest {
	bytes account = 1;
	bytes enter_session = 2;
}

// role list data
message MsgBaseRoleData {
	uint64 role_id = 1;
	bytes nick_name = 2;
	int32 race = 3;
	int32 sex = 4;
	int32 hp = 5;
	int32 level = 6;
}

// gate -> client  [MSGID_S2C_GET_ROLE_RESPONSE]
message MsgS2C_GetRoleResponse {
	bytes reconnect_session = 1;
	MsgBaseRoleData role_data = 2;
}

// client -> gate  [MSGID_C2S_ROLELIST_REQUEST]
//message MsgC2S_RoleListRequest {
//}

// gate -> client  [MSGID_S2C_ROLELIST_RESPONSE]
//message MsgS2C_RoleListResponse {
//	repeated MsgRoleData role_list = 1;
//}

// client -> gate  [MSGID_C2S_CREATE_ROLE_REQUEST]
message MsgC2S_CreateRoleRequest {
	bytes nick_name = 1;
	int32 race = 2;
	int32 sex = 3;
}

// gate -> client  [MSGID_S2C_CREATE_ROLE_RESPONSE]
message MsgS2C_CreateRoleResponse {
	MsgBaseRoleData role_data = 1;
}

// client -> gate  [MSGID_C2S_DELETE_ROLE_REQUEST]
message MsgC2S_DeleteRoleRequest {
	uint64 role_id = 1;
}

// gate -> client  [MSGID_S2C_DELETE_ROLE_RESPONSE]
message MsgS2C_DeleteRoleResponse {
	uint64 role_id = 1;
}

// client -> gate  [MSGID_C2S_ENTER_GAME_REQUEST]  request enter game, send to gate server
message MsgC2S_EnterGameRequest {
	//uint64 role_id = 1;
}

// gate -> client  [MSGID_S2C_ENTER_GAME_RESPONSE]  response for enter game request
message MsgS2C_EnterGameResponse {
	//uint64 role_id = 1;
}

// gate -> client  [MSGID_S2C_ENTER_GAME_COMPLETE_NOTIFY]  enter game complete
message MsgS2C_EnterGameCompleteNotify {
}

// client -> gate  [MSGID_C2S_LEAVE_GAME_REQUEST]
message MsgC2S_LeaveGameRequest {
}

// gate -> client  [MSGID_S2C_LEAVE_GAME_RESPONSE]
message MsgS2C_LeaveGameResponse {
}

// client -> gate  [MSGID_C2S_RECONNECT_REQUEST]  reconnect request
message MsgC2S_ReconnectRequest {
	bytes account = 1;
	bytes reconnect_session = 2;
}

// gate -> client  [MSGID_S2C_RECONNECT_RESPONSE]  response for reconnect request
message MsgS2C_ReconnectResponse {
	bytes reconnect_session = 1;
}
